// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  style={
    Object {
      "marginBottom": 36,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <h1
        className="MuiTypography-root-121 MuiTypography-headline-126 MuiTypography-colorTextSecondary-143"
        style={
          Object {
            "marginBottom": 16,
          }
        }
      >
        Endereços
      </h1>
      <p
        className="MuiTypography-root-121 MuiTypography-body1-130 MuiTypography-colorInherit-140"
      >
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to={
            Object {
              "pathname": "/auth/sign-up",
              "state": Object {
                "referrer": "foo",
              },
            }
          }
        >
          Link - 
          Cadastre-se
        </div>
         
        <span>
          para ver os endereços do fornecedor.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`with current user renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
  style={
    Object {
      "marginBottom": 36,
    }
  }
>
  <div
    className="MuiPaper-root-93 MuiPaper-elevation2-97 MuiPaper-rounded-94 MuiCard-root-92"
  >
    <div
      className="MuiCardContent-root-120"
    >
      <h1
        className="MuiTypography-root-121 MuiTypography-headline-126 MuiTypography-colorTextSecondary-143"
        style={
          Object {
            "marginBottom": 16,
          }
        }
      >
        Endereços
      </h1>
      <div
        currentUser={Object {}}
        location={
          Object {
            "pathname": "foo",
          }
        }
        supplier={Object {}}
      >
        New - 
      </div>
      <div
        currentUser={Object {}}
        location={
          Object {
            "pathname": "foo",
          }
        }
        supplier={Object {}}
      >
        List - 
      </div>
    </div>
  </div>
</div>
`;
